...
                                ),
                              ],
                            ),
                            Container(
                              width: double.infinity,
                              child: TextFormField(
                                key: ValueKey('itemNameField_iavf'),
                                controller: _model.itemNameFieldTextController,
                                focusNode: _model.itemNameFieldFocusNode,
                                autofocus: false,
                                enabled: true,
                                textInputAction: TextInputAction.next,
                                obscureText: false,
...
                                    .asValidator(context),
                              ),
                            ),
                            Container(
                              width: double.infinity,
                              child: TextFormField(
                                key: ValueKey('priceField_c0xx'),
                                controller: _model.priceFieldTextController,
                                focusNode: _model.priceFieldFocusNode,
                                autofocus: false,
                                enabled: true,
                                textInputAction: TextInputAction.done,
                                obscureText: false,
...
                              ],
                            ),
                            Padding(
                              padding: EdgeInsetsDirectional.fromSTEB(
                                  0.0, 0.0, 0.0, 8.0),
                              child: FFButtonWidget(
                                key: ValueKey('addFoodButton_5afu'),
                                onPressed: () async {
                                  logFirebaseEvent(
                                      'BARCODE_PAGE_PAGE_addFoodButton_ON_TAP');
                                  if (!((_model.itemNameFieldTextController
                                              .text ==
                                          '') ||
...
                                  } else {
                                    logFirebaseEvent(
                                        'addFoodButton_show_snack_bar');
                                    ScaffoldMessenger.of(context).showSnackBar(
                                      SnackBar(
                                        content: Text(
                                          'PLEASE FILL OUT ALL SECTIONS AND SELECT A DATE BEFORE CLICKING \"Add Food!\"',
                                          style: FlutterFlowTheme.of(context)
                                              .bodyLarge
                                              .override(
                                                font: GoogleFonts.darumadropOne(
                                                  fontWeight:
                                                      FlutterFlowTheme.of(
...
