...
                          children: [
                            Row(
                              mainAxisSize: MainAxisSize.max,
                              mainAxisAlignment: MainAxisAlignment.spaceBetween,
                              children: [
                                Text(
                                  key: ValueKey('Text_9l9l'),
                                  'Welcome, ',
                                  textAlign: TextAlign.start,
                                  style: FlutterFlowTheme.of(context)
                                      .bodyMedium
                                      .override(
                                        font: GoogleFonts.darumadropOne(
...
                                          }
                                          List<FoodsRecord>
                                              listViewFoodsRecordList =
                                              snapshot.data!;

                                          return ListView.separated(
                                            key: ValueKey('ListView_g7hw'),
                                            padding: EdgeInsets.zero,
                                            shrinkWrap: true,
                                            scrollDirection: Axis.vertical,
                                            itemCount:
                                                listViewFoodsRecordList.length,
                                            separatorBuilder: (_, __) =>
...
                                                    FlutterFlowTheme.of(context)
                                                        .bodyMedium
                                                        .fontStyle,
                                              ),
                                        ),
                                        Text(
                                          'items wasted',
                                          style: FlutterFlowTheme.of(context)
                                              .bodyMedium
                                              .override(
                                                font: GoogleFonts.darumadropOne(
                                                  fontWeight:
                                                      FlutterFlowTheme.of(
...
