...
              child: Column(
                mainAxisSize: MainAxisSize.min,
                mainAxisAlignment: MainAxisAlignment.start,
                crossAxisAlignment: CrossAxisAlignment.center,
                children: [
                  Text(
                    key: ValueKey('Text_gfkm'),
                    'Lets Get Started!\nAdd a profile picture and a username!',
                    textAlign: TextAlign.center,
                    style: FlutterFlowTheme.of(context).bodyMedium.override(
                          font: GoogleFonts.darumadropOne(
                            fontWeight: FlutterFlowTheme.of(context)
                                .bodyMedium
...
